package com.intuit.ratelimiter.constants;

public enum RateLimiterType {
    SLIDING,
    FIXED;
}
